chore: fix alignment when title is not cover

--- a/assets/scss/components/elements/blog/_single.scss
+++ b/assets/scss/components/elements/blog/_single.scss
@@ -24,6 +24,7 @@
 
 .entry-header .title {
 	margin-bottom: $spacing-xs;
+	text-align: var(--textAlign, left);
 }
 
 .attachment-neve-blog {
